<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/sign_in_back"
        android:layout_width="33sp"
        android:layout_height="33sp"
        android:layout_gravity="start"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        android:background="@drawable/strelka"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/banner_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/appname"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="129dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/full_name_sign_up"
            android:layout_width="300sp"
            android:layout_height="56sp"
            android:layout_marginTop="30sp"
            android:background="@drawable/radius_edit_text"
            android:textColor="#AAAAAA"
            android:hint="@string/hint_fullname"
            android:inputType="text"
            android:paddingLeft="7sp"
            android:textSize="24sp"
            android:textColorHint="#FFFFFF"/>

        <EditText
            android:id="@+id/nickname_sign_up"
            android:layout_width="300sp"
            android:layout_height="56sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/radius_edit_text"
            android:hint="@string/hint_nickname"
            android:textColor="#AAAAAA"
            android:inputType="textPersonName"
            android:paddingLeft="7sp"
            android:textSize="24sp"
            android:textColorHint="#FFFFFF"/>

        <EditText
            android:id="@+id/email_sign_up"
            android:layout_width="300sp"
            android:layout_height="56sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/radius_edit_text"
            android:hint="@string/hint_email"
            android:textColor="#AAAAAA"
            android:inputType="textEmailAddress"
            android:paddingLeft="7sp"
            android:textSize="24sp"
            android:textColorHint="#FFFFFF"/>

        <EditText
            android:id="@+id/pswd_sign_up"
            android:layout_width="300sp"
            android:layout_height="56sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/radius_edit_text"
            android:hint="@string/password"
            android:textColor="#AAAAAA"
            android:inputType="textPassword"
            android:paddingLeft="7sp"
            android:textSize="24sp"
            android:textColorHint="#FFFFFF"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="226sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"
            android:background="@drawable/radius_btn"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>