<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"
            />

        <ImageView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/game_banner"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/game_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintVertical_bias="0"
            app:layout_goneMarginEnd="0dp"
            />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="106dp"
            android:layout_height="125dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintWidth_max="100dp"
            app:srcCompat="@drawable/poster" />

        <TextView
            android:id="@+id/director_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/publisher"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintWidth_default="wrap"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/publisher_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/director_label"
            app:layout_constraintTop_toTopOf="@id/director_label"
            app:layout_constrainedWidth="true"
            app:layout_goneMarginEnd="0dp"
            android:textSize="15sp"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_poster_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="poster, title"
            />

        <TextView
            android:id="@+id/short_descriptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/title_poster_bottom_barrier"
            android:textSize="17sp"
            />

        <TextView
            android:id="@+id/tag_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tags_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/short_descriptions"
            app:layout_constraintWidth_default="wrap"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:constraint_referenced_ids="tag_1,tag_2,tag_3,tag_4"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="10dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/actions"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tag_label"
            />

        <TextView
            android:id="@+id/tag_1"
            style="@style/Tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_1"
            />

        <TextView
            android:id="@+id/tag_2"
            style="@style/Tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_2"
            />

        <TextView
            android:id="@+id/tag_3"
            style="@style/Tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_3"
            />

        <TextView
            android:id="@+id/tag_4"
            style="@style/Tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_4"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:constraint_referenced_ids="like,share"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tags"
            app:layout_constraintWidth_default="wrap"
            />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_goneMarginEnd="0dp"
            />


        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/share"
            app:layout_goneMarginStart="0dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>