<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:gravity="center_horizontal"
        android:layout_marginTop="200sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_page_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/appname"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="129dp" />

        <TextView
            android:id="@+id/main_page_under_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center_horizontal"
            android:text="@string/created_by_iltc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"

        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="226sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:background="@drawable/radius_btn"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="226sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/radius_btn"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_guest_btn"
            android:layout_width="200sp"
            android:layout_height="56sp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="#002B0F43"
            android:fontFamily="@font/overpass_mono"
            android:gravity="center"

            android:text="Войти как гость"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            />

    </LinearLayout>


</LinearLayout>